--- a/baseframe/static/sass/_layout.sass
+++ b/baseframe/static/sass/_layout.sass
@@ -428,3 +428,5 @@ ul.grid
     display: block
   ul.grid > .row-fluid > [class*="span"]:first-child
     padding-left: 0
+  .cardset li, .userset li
+    margin-bottom: $body-line-height !important
